--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "compression": "^1.7.1",
     "content-filter": "^1.1.2",
     "cors": "^2.8.4",
+    "elliptic": "^6.4.1",
     "express": "^4.16.2",
     "express-force-ssl": "^0.3.2",
     "jsonwebtoken": "^8.1.0",
@@ -57,6 +58,7 @@
     "mongoose-create-unique": "^0.4.4",
     "mongoose-keywords": "^0.3.2",
     "morgan": "^1.7.0",
+    "node-rsa": "^1.0.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
