--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "coverage": "npm test -- --coverage",
     "postcoverage": "opn coverage/lcov-report/index.html",
     "dev": "nodemon -i \"*.test.js\" .",
-    "prod": "cross-env NODE_ENV=production nodemon -i \"*.test.js\" -r dotenv-safe/config .",
     "lint": "eslint src",
     "docs": "apidoc -i src -o docs && apidoc-markdown -p docs -o DOCS.md",
     "postdocs": "opn docs/index.html"
@@ -30,7 +29,6 @@
     "eslint-plugin-promise": "^3.0.0",
     "eslint-plugin-standard": "^3.0.1",
     "jest-cli": "^20.0.4",
-    "mockgoose": "^6.0.8",
     "nock": "^9.0.2",
     "nodemon": "^1.10.2",
     "opn-cli": "^3.1.0",
@@ -38,35 +36,37 @@
     "supertest": "^3.0.0"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
+    "babel-core": "^6.26.3",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-1": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "bcrypt": "^1.0.3",
-    "bluebird": "^3.5.1",
-    "body-parser": "^1.18.2",
-    "bodymen": "^1.0.3",
-    "compression": "^1.7.1",
+    "bcrypt": "^3.0.2",
+    "bluebird": "^3.5.3",
+    "body-parser": "^1.18.3",
+    "bodymen": "^1.1.0",
+    "compression": "^1.7.3",
     "content-filter": "^1.1.2",
-    "cors": "^2.8.4",
+    "cors": "^2.8.5",
     "elliptic": "^6.4.1",
-    "express": "^4.16.2",
+    "express": "^4.16.4",
     "express-force-ssl": "^0.3.2",
-    "jsonwebtoken": "^8.1.0",
-    "mongoose": "^4.12.4",
+    "express-mongo-sanitize": "^1.3.2",
+    "jsonwebtoken": "^8.4.0",
+    "mongoose": "^5.3.12",
     "mongoose-create-unique": "^0.4.4",
-    "mongoose-keywords": "^0.3.2",
-    "morgan": "^1.7.0",
+    "mongoose-keywords": "^0.4.0",
+    "morgan": "^1.9.1",
+    "nodemon": "^1.10.2",
     "node-rsa": "^1.0.1",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-http-bearer": "^1.0.1",
-    "passport-jwt": "^3.0.0",
+    "passport-jwt": "^4.0.0",
     "querymen": "^2.1.3",
     "rand-token": "^0.4.0",
-    "request": "^2.83.0",
+    "request": "^2.88.0",
     "request-promise": "^4.2.2",
-    "sendgrid": "^4.0.2"
+    "sendgrid": "^5.2.3"
   }
 }
