--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,6 @@ services:
      - .:/usr/src/app
     depends_on: 
      - redis
-    entrypoint: ["nodemon", "./src"]
+    entrypoint: ["node", "./src"]
   redis:
     image: "redis:alpine"
