--- a/variables.env
+++ b/variables.env
@@ -1,3 +1,24 @@
+HYDRA_SYSTEM_SECRET
 SENDGRID_KEY
 MASTER_KEY
 JWT_SECRET
+SYSTEM_SECRET
+POSTGRES_USER
+POSTGRES_PASSWORD
+POSTGRES_DB
+DATABASE_URL
+
+LOGIN_CONSENT_VERSION
+HYDRA_VERSION
+OATHKEEPER_VERSION
+KETO_VERSION
+BROWSER_HYDRA_HOST
+BROWSER_CONSUMER_HOST
+BROWSER_IDP_HOST
+BROWSER_OATHKEEPER_PROXY_HOST
+OAUTH2_CONSENT_URL
+OAUTH2_LOGIN_URL
+OAUTH2_ISSUER_URL
+HYDRA_ADMIN_URL
+NODE_TLS_REJECT_UNAUTHORIZED
+OAUTH2_SHARE_ERROR_DEBUG
