env var finish set up

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -23,7 +23,7 @@ services:
     environment:
      - LOG_LEVEL=debug
     command:
-      migrate sql postgres://dbuser:secret@postgresd:5432/accesscontroldb?sslmode=disable
+      migrate sql $DATABASE_URL
     restart: on-failure
   
   hydra:
@@ -56,7 +56,7 @@ services:
      - variables.env
     environment:
      - NODE_TLS_REJECT_UNAUTHORIZED=0
-     - PORT=4488
+     - PORT=9000
      - NODE_ENV=development
     networks:
      - intranet
