--- a/variables.env
+++ b/variables.env
@@ -22,3 +22,6 @@ OAUTH2_ISSUER_URL
 HYDRA_ADMIN_URL
 NODE_TLS_REJECT_UNAUTHORIZED
 OAUTH2_SHARE_ERROR_DEBUG
+PJ_OAUTH_CLIENT_ID
+PJ_OAUTH_CLIENT_SECRET
+PJ_OAUTH_CLIENT_CALLBACK_URL
